<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ascent</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_class">Kelas</string>
    <string name="title_course">Kursus</string>
    <string name="title_account">Akun</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_buy">Beli %s</string>
    <string name="text_category" tools:ignore="Typos">Kategori Populer</string>
    <string name="text_view_all">Lihat Semua</string>
    <string name="text_popular_course" tools:ignore="Typos">Kursus Populer</string>
    <string name="label_search_course">Cari Kursus terbaik....</string>
    <string name="label_phone_62">+62</string>

    <string name="label_name">Nama</string>
    <string name="label_fullname">Nama Lengkap</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Nomor Telepon</string>
    <string name="label_password">Password</string>
    <string name="label_create_password">Buat Password</string>
    <string name="label_enter_password">Masukkan password</string>

    <string name="label_hint_email">Contoh: johndoe@gmail.com</string>

    <string name="input_type_text">text</string>
    <string name="input_type_text_area">text_area</string>
    <string name="input_type_text_phone">text_phone</string>
    <string name="label_login">Login</string>
    <string name="label_register">Daftar</string>
    <string name="label_input_otp">Masukkan OTP</string>
    <string name="label_desc_login">Mulailah petualangan belajar Anda sekarang! Login untuk mengakses pengetahuan tanpa batas.</string>
    <string name="label_enter">Masuk</string>
    <string name="label_forgot_password">Lupa Kata Sandi</string>
    <string name="label_otp_desc">Ketik 4 digit kode yang dikirimkan ke %s</string>
    <string name="label_otp_timer">Kirim Ulang OTP dalam %s detik</string>
    <string name="label_sent_code_via_email">Kirim ulang OTP melalui Email</string>
    <string name="text_error_email_empty">Email tidak boleh kosong</string>
    <string name="text_error_name_empty">Nama tidak boleh kosong</string>
    <string name="text_error_phone_empty">Nomor Telefon tidak boleh kosong</string>
    <string name="text_error_email_invalid">Masukan format email yang valid</string>
    <string name="text_error_password_empty">Password tidak boleh kosong</string>
    <string name="text_error_password_less_than_8_char">Password minimal 8 karakter</string>
    <string name="text_already_have_account_login">Sudah punya akun? Masuk di sini</string>
    <string name="text_already_have_account_login_highlight">Masuk di sini</string>

    <string name="text_dont_have_account_register">Belum punya akun? Daftar di sini</string>
    <string name="text_dont_have_account_register_highlight">Daftar di sini</string>
    <string name="text_notification">Notification</string>
    <string name="txt_topik_kelas">Topik Kelas</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_selamat">Selamat!</string>
    <string name="txt_payment_success">Transaksi pembayaran kelas premium berhasil!</string>
    <string name="txt_payment_success_2">E-Receipt telah dikirimkan ke email.</string>
    <string name="txt_mulai_belajar">Mulai Belajar</string>
    <string name="txt_kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="txt_onboarding" tools:ignore="TypographyEllipsis">Onboarding...</string>
    <string name="txt_onboarding_1">Persiapkan hal berikut untuk belajar yang maksimal</string>
    <string name="txt_onboarding_2">Mempunyai akun Figma atau Install Adobe XD Menggunakan internet minimal kecepatan 2Mbps Belajar di tempat yang nyaman</string>
    <string name="txt_ikuti_kelas">Ikuti Kelas</string>
    <string name="txt_oops">Oops!</string>
    <string name="txt_maaf_anda_harus_login">Maaf, anda harus login terlebih dahulu!</string>
    <string name="txt_masuk">Masuk</string>
    <string name="txt_all">All</string>
    <string name="txt_kelas_premium">Kelas Premium</string>
    <string name="txt_kelas_gratis">Kelas Gratis</string>
    <string name="text_highlight_have_account">Masuk di sini</string>
    <string name="text_have_account">Sudah punya akun? Masuk di sini</string>
    <string name="text_account">Akun</string>
    <string name="text_my_profile">Ubah Profile</string>
    <string name="text_change_password">Ubah Password</string>
    <string name="text_payment_history">Riwayat Pembayaran</string>
    <string name="text_log_out">Keluar</string>
    <string name="txt_kelas_berjalan">Kelas Berjalan</string>
    <string name="txt_in_progress">In Progress</string>
    <string name="txt_selesai">Selesai</string>
    <string name="text_label">History Payment</string>
    <string name="text_paid">Paid</string>
    <string name="text_not_paid">Waiting for payment</string>
    <string name="text_greeting_header_1">Pelajari Keterampilan Anda</string>
    <string name="text_greeting_header_2">Temukan kursus terbaik Anda di sini.</string>
    <string name="kelas_lainnya">Kelas Lainnya</string>
    <string name="title_about_class">About Class</string>
    <string name="title_list_class">List Class</string>
    <string name="tab_text_1">About Class</string>
    <string name="tab_text_2">List Class</string>
    <string name="titles_ic_play">ic_play</string>
    <string name="toggle_full_screen">toggle full screen</string>

    <string name="module_course">Modul</string>
    <string name="duration_course">Menit</string>


    <string name="label_error_no_internet">Koneksi bermasalah, silahkan coba lagi nanti</string>
    <string name="text_rupiah">Rp</string>

    <string name="label_pay">Bayar</string>
    <string name="label_free">Gratis</string>

    <string name="label_enter_old_password">Masukkan Password Lama</string>
    <string name="label_enter_new_password">Masukkan Password Baru</string>
    <string name="label_repeat_new_password">Ulangi Password Baru</string>
    <string name="about_class">About Class</string>
    <string name="intended_for">Intended For</string>
    <string name="kelas_ini_ditujukan_untuk">Kelas ini ditujukan Untuk</string>
    <string name="about_course">About Course</string>
    <string name="label_new_otp">New OTP</string>
    <string name="label_password_confirmation">Password Confirmation</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_payment_summary">Rincian Pembayaran</string>
    <string name="chapter_1_pendahuluan">Chapter 1 - Pendahuluan</string>
    <string name="lihat_deskripsi">Lihat Deskripsi</string>
    <string name="materi_belajar">Materi Belajar</string>
    <string name="sembunyikan_deskripsi">Sembunyikan Deskripsi</string>
    <string name="label_price">Harga</string>
    <string name="label_ppn_11">PPN 11%</string>
    <string name="label_total_price">Total Harga</string>
    <string name="label_buy_course">Beli Course ini</string>
    <string name="label_add_course">Tambahkan Ke Kelas Anda</string>
    <string name="label_empty_class">Maaf, Anda belum mengikuti kelas.</string>
    <string name="label_fragment_not_login">Anda perlu login untuk mengakses fitur ini</string>
    <string name="label_empty_search_class">Maaf, Kelas yang anda cari tidak ada</string>
    <string name="label_search_class">Silahkan cari kelas yang anda inginkan</string>

    <string name="label_var_module">%s Modul</string>
    <string name="label_var_minute">%s Menit</string>
    <string name="label_var_chapter">Chapter %s</string>
    <string name="label_var_status_class">Status Kelas : %s</string>
    <string name="label_var_author">Author : %s</string>
    <string name="label_var_percent">%s%%</string>

    <string name="label_error_not_login_general">Silahkan login untuk menikmati fitur ini</string>
    <string name="text_summary">Ringkasan Pembayaran</string>
    <string name="label_all_level">Semua Level</string>
    <string name="label_beginner_level">Beginner</string>
    <string name="label_intermediate_level">Intermediate</string>
    <string name="label_advanced_level">Advanced</string>
    <string name="label_category">Kategori</string>
    <string name="label_level_kesulitan">Level Kesulitan</string>
    <string name="label_update">Update</string>
    <string name="label_paid">Sudah dibayar</string>
    <string name="label_unpaid">Belum dibayar</string>
    <string name="label_running_class">Kelas Berjalan</string>
</resources>