<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.raveendra.finalproject_binar.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.raveendra.finalproject_binar.presentation.notifications.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_class"
        android:name="com.raveendra.finalproject_binar.presentation.class.ClassFragment"
        android:label="@string/title_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_course"
        android:name="com.raveendra.finalproject_binar.presentation.course.CourseFragment"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.raveendra.finalproject_binar.presentation.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>