<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/neutral_02"
    android:padding="@dimen/dimen_8_dp"
    tools:context=".presentation.detailcourse.AboutClassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_about_title"
            style="@style/TextMedium16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:text="@string/about_course" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/TextRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_class" />


        <TextView
            android:id="@+id/tv_intended_for_title"
            style="@style/TextMedium16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:text="@string/kelas_ini_ditujukan_untuk" />

        <TextView
            android:id="@+id/tv_intended_for"
            style="@style/TextRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/intended_for" />
    </LinearLayout>

</ScrollView>