<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/dimen_24_dp"
    android:padding="@dimen/dimen_10_dp"
    android:layout_marginHorizontal="@dimen/dimen_16_dp"
    tools:context=".presentation.auth.forgotpassword.ForgotPasswordActivity">
    <TextView
        android:id="@+id/tvforgotPassword"
        style="@style/TextBold24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64_dp"
        android:text="@string/label_forgot_password"
        android:textColor="@color/primary_dark_blue_06"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.raveendra.finalproject_binar.utils.LabelTextFieldView
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24_dp"
        android:hint="@string/label_hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/neutral_03"
        app:customLabelText="@string/label_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvforgotPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_dark_blue"
        android:text="@string/label_new_otp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/TextMedium14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>