<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingHorizontal="16dp"
    android:paddingBottom="48dp"
    tools:context=".presentation.popup.PaymentDialogFragment">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_mulai"
        app:layout_constraintTop_toBottomOf="@id/iv_close">

        <TextView
            android:id="@+id/tv_oops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextBold24"
            android:padding="12dp"
            android:text="@string/txt_selamat"
            android:textAlignment="center"
            android:textColor="@color/primary_dark_blue_06"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_oops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/img_paymentsuccess_popup" />

        <LinearLayout
            android:id="@+id/ll_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/tv_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextBold14"
                android:text="@string/txt_payment_success"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextMedium14"
                android:text="@string/txt_payment_success_2"
                android:textAlignment="center" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/primary_dark_blue_06"
        android:paddingVertical="14dp"
        android:text="@string/txt_mulai_belajar"
        android:textColor="@color/white"
        style="@style/TextMedium16"
        app:layout_constraintBottom_toTopOf="@id/tv_kembali_ke_beranda" />

    <TextView
        android:id="@+id/tv_kembali_ke_beranda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_kembali_ke_beranda"
        android:textAlignment="center"
        android:textColor="@color/primary_dark_blue_06"
        style="@style/TextMedium16"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>