<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light_blue_05"
    android:paddingHorizontal="@dimen/dimen_24_dp">

    <TextView
        android:id="@+id/tvLogin"
        style="@style/TextBold24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64_dp"
        android:text="@string/label_register"
        android:textColor="@color/primary_dark_blue_05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOtpDesc"
        style="@style/TextRegular14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_otp_desc"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_24_dp"
        android:layout_marginHorizontal="@dimen/dimen_24_dp"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <com.mukeshsolanki.OtpView
        android:id="@+id/otpView"
        style="@style/TextMedium12"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="numberPassword"
        android:textColor="@color/black"
        app:OtpItemCount="4"
        app:OtpItemRadius="@dimen/dimen_16_dp"
        app:OtpItemSpacing="@dimen/dimen_12_dp"
        app:OtpLineColor="@color/line_color_selector"
        android:itemBackground="@color/white"
        app:OtpLineWidth="@dimen/dimen_1_dp"
        app:OtpState_filled="true"
        app:OtpViewType="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpDesc" />

    <TextView
        android:id="@+id/tvResendOtpCountdown"
        style="@style/TextRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24_dp"
        android:text="@string/label_otp_timer"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpView" />

    <TextView
        android:id="@+id/tvResendOtp"
        style="@style/TextBold14"
        android:textColor="@color/primary_dark_blue_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sent_code_via_email"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_40_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResendOtpCountdown" />
</androidx.constraintlayout.widget.ConstraintLayout>