<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingHorizontal="16dp"
    android:paddingBottom="48dp"
    tools:context=".presentation.popup.NonLoginDialogFragment">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_masuk"
        app:layout_constraintTop_toBottomOf="@id/iv_close">

        <TextView
            android:id="@+id/tv_oops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextBold24"
            android:padding="8dp"
            android:text="@string/txt_oops"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/primary_dark_blue_06"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_oops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/img_nonlogin_popup" />

        <TextView
            android:id="@+id/tv_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextMedium14"
            android:padding="18dp"
            android:text="@string/txt_maaf_anda_harus_login"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/primary_dark_blue_06"
        style="@style/TextBold16"
        android:paddingVertical="14dp"
        android:textColor="@color/white"
        android:text="@string/txt_masuk"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>